--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <p>Lorem ipsum dolor sit amet co necessitatibus facere aspernatur hic, earum officia? Voluptatum, ullam! Itaque?</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
-                    <button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button>
+                    <a href="https://github.com/iKevinB/Pupuseria.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
                 </div>
-                <img src="img/project1-img1.png" alt="">
+                <img src="img/projectPupusas_img.png" alt="">
                 
             </div>
             <div class="project2">
@@ -179,7 +179,7 @@
                 <p>Lorem ipsum dolor sit amet co necessitatibus facere aspernatur hic, earum officia? Voluptatum, ullam! Itaque?</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
-                    <button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button>
+                    <a href="https://github.com/iKevinB/Zapateria.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
                 </div>
                 <img src="img/shoesPage.png" alt="">
                 
@@ -190,7 +190,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
-                    <button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button>
+                    <a href="https://github.com/iKevinB/App-del-Clima.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
                 </div>
                 <div class="weather-app-container">
                     <img src="img/project3-2.png" alt="">
