--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="project">
                 <h2>My Projects</h2>
                 <h3>Pupuseria</h3>
-                <p>Lorem ipsum dolor sit amet co necessitatibus facere aspernatur hic, earum officia? Voluptatum, ullam! Itaque?</p>
+                <p>FrontEnd practice, salvadorean food's restaurant landing page.</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
                     <a href="https://github.com/iKevinB/Pupuseria.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
@@ -175,8 +175,8 @@
                 
             </div>
             <div class="project2">
-                <h3>Zapateria</h3>
-                <p>Lorem ipsum dolor sit amet co necessitatibus facere aspernatur hic, earum officia? Voluptatum, ullam! Itaque?</p>
+                <h3>Shoe Store</h3>
+                <p>FrontEnd practice, shoe store landing page.</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
                     <a href="https://github.com/iKevinB/Zapateria.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
@@ -186,8 +186,8 @@
             </div>
             
             <div class="project3">
-                <h3>App del Clima</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus</p>
+                <h3>Weather App</h3>
+                <p>App to see the weather anywhere in the world using Weather API</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
                     <a href="https://github.com/iKevinB/App-del-Clima.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
@@ -213,7 +213,7 @@
                 <div class="block2">
                     <h3 class="animated-text">¡Hello world!</h3>
                     <p>Web Development <i class="fa-sharp fa-solid fa-code"></i></p> 
-                    <a href="services-page.html"><h5>Learn More <i class="fa-solid fa-arrow-right"></i></h5> </a> 
+                    <!--<a href="services-page.html"><h5>Learn More <i class="fa-solid fa-arrow-right"></i></h5> </a>-->
                 </div>
             </div>
         </div>
