limpieza de imagenes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="long-navigation">
             <a class="long-logo" href=""><img src="img/logo1.png" alt=""></a>
-            <a href="index.html">Home</a>
+            <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
@@ -33,7 +33,7 @@
         </nav>
         <nav class="navigation">
             <i id="menu-close" onclick="Close()" class="fa-solid fa-xmark"></i>
-            <a class="list-item" id="logo" href="index.html">Home</a>
+            <a class="list-item" id="logo" href="#home">Home</a>
             <a class="list-item" class="list-item" href="#about">About Me</a>
             <a class="list-item" href="#skills">Skills</a>
             <a class="list-item" href="#projects">Projects</a>
@@ -48,7 +48,7 @@
             <span class="main-logo"><img src="img/logo2.png" alt=""></span>
             <i id="menu-open" onclick="Menu()" class="fa-solid fa-bars"></i>
         </nav>
-        <div class="header-content">
+        <div class="header-content" id="home">
             <div >
                 <div class="header-icons">
                     <a href=""><i id="linkedin-icon" class="fa-brands fa-linkedin"></i></a>
@@ -64,7 +64,7 @@
                 <h1>Oh hey! I am Kevin Alejandro Zelaya Blandín</h1>
                 <p>I am a Junior Full Stack Web Developer and a passionate technology fan.</p>
                 <button>
-                    <a id="cv" href="CV Alejandro Blandín.pdf" download>Download CV</a>
+                    <a id="cv" href="docs/CV Alejandro Blandín.pdf Alejandro Blandín.pdf" download>Download CV</a>
                 </button>
             </div>
         </div>
@@ -187,7 +187,7 @@
             
             <div class="project3">
                 <h3>Weather App</h3>
-                <p>App to see the weather anywhere in the world using Weather API</p>
+                <p>App to see the weather anywhere in the world using OpenweatherMap API</p>
                 <div class="projectButtons">
                     <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
                     <a href="https://github.com/iKevinB/App-del-Clima.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
