--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a class="list-item" href="#services">Services</a>
             <a class="list-item" href="#contact">Contact</a>
             <div class="header-media">
-                <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="linkedin.com/in/alejandro-blandín"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/iKevinB" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
         </nav>
         <nav class="main-nav">
