--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1>Oh hey! I am Kevin Alejandro Zelaya Blandín</h1>
                 <p>I am a Junior Full Stack Web Developer and a passionate technology fan.</p>
                 <button>
-                    <a id="cv" href="docs/CV Alejandro Blandín.pdf Alejandro Blandín.pdf" download>Download CV</a>
+                    <a id="cv" href="docs/CV Alejandro Blandín.pdf Alejandro Blandín.pdf" download>Download Resume</a>
                 </button>
             </div>
         </div>
@@ -139,7 +139,7 @@
                 
                 <div class="skills__lines_info">
                     <p><i id="laravel-icon" class="fa-brands fa-laravel"></i> Laravel</p>
-                    <p id="percent">50%</p>
+                    <p id="percent">30%</p>
                 </div>
                 <div class="line_container">
                     .
@@ -152,7 +152,7 @@
             <div class="skills__others">
                 <h3><i id="bootstrap-icon" class="fa-brands fa-bootstrap"></i> Bootstrap</h3>
                 <h3><i id="github-icon" class="fa-brands fa-github"></i> Git, GitHub</h3>
-                <h3><i id="sql-icon" class="fa-sharp fa-solid fa-database"></i> SQL</h3>
+                <h3><i id="sql-icon" class="fa-sharp fa-solid fa-database"></i> MySQL</h3>
                 <h3><i id="wordpress-icon" class="fa-brands fa-wordpress"></i> Wordpress</h3>
                 <h3><i id="python-icon" class="fa-brands fa-python"></i> Python</h3>
                 <h3><i id="csharp-icon" class="fa-solid fa-c"></i> <strong id="sharp">#</strong></h3>
@@ -167,7 +167,7 @@
                 <h3>Pupuseria</h3>
                 <p>FrontEnd practice, salvadorean food's restaurant landing page.</p>
                 <div class="projectButtons">
-                    <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button>
+                    <!-- <button>Visit Page <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></i></button> -->
                     <a href="https://github.com/iKevinB/Pupuseria.git" target="_blank"><button>Watch on GitHub <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button></a>
                 </div>
                 <img src="img/projectPupusas_img.png" alt="">
